# tracepy

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-tests.yml
RayPy/: geoplot.py  transforms.py
codevp/: __init__.py  geometry.py  geoplot.py  optimize.py  optplot.py  ray.py  raygroup.py  transforms.py
docs/: index.md
example_projects/: Newtonian_Telescope.ipynb
examples/: Hyperbolic_Null_Test.ipynb  Newtonian_Telescope.ipynb  Newtonian_Telescope_Specify_Glass_Type.ipynb  Parabolic_Null_Test.ipynb  Simple_Spherical_Aberration_Example.ipynb
misc/: RayGroup_Test.ipynb
optimization_examples/: Simple_Spherical_Aberration_Example.ipynb
raypy/: iotables.py  raygroup.py
tests/: test_geometry.py  test_hyperbolic.py  test_optimizer.py  test_parabolic.py  test_plotting.py  test_transform.py
tracepy/: __init__.py  constants.py  exceptions.py  geometry.py  geoplot.py  index.py  iotables.py  optimize.py  optplot.py  ray.py  raygroup.py  transforms.py  utils.py
tracepy/glass/: glass_dict.json
tracepy/glass/schott/infrared/: IRG22.yml  IRG24.yml  IRG25.yml  IRG26.yml
validation/: Hyperbolic_Null_Test.ipynb  Parabolic_Null_Test.ipynb
