[metadata]
name = tracepy
author = Gavin Niendorf
author-email = gavinniendorf@gmail.com
home-page = http://tracepy.readthedocs.io
description = Ray tracing and optical design in Python
packages = tracepy
long-description = file: README.md
license = MIT
platform = any

keywords =
    optics
    ray-tracing
    optimization
    geometrical optics
    optical-design
    optical-engineering
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7